--- a/src/libraty.html
+++ b/src/libraty.html
@@ -20,8 +20,8 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
 
-    <include src="./partials/header.html"></include>
-    <include src="./partials/gallery.html"></include>
+    <include src="./partials/my-library.html"></include>
+
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
 
