--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <main>
       <section class="section">
         <include src="./partials/gallery.html"></include>
-        <div id="pagination" class="tui-pagination"></div>
+        <include src="./partials/pagination.html"></include>
       </section>
     </main>
     
