--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>PageOne title</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,10 +27,10 @@
         <include src="./partials/pagination.html"></include>
       </section>
     </main>
-    
+
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
-    
+
     <!-- ======== JS ============ -->
 
     <script type="module" src="./index.js"></script>
