--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pagetwo title</title>
+    <title>Page title</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,8 +27,9 @@
         <include src="./partials/pagination.html"></include>
       </section>
     </main>
-    <include src="./partials/modal.html"></include>
+
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal.html"></include>
 
     <!-- ======== JS ============ -->
 
