--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
+    <include src="./partials/loader.html"></include>
 
     <!-- ======== JS ============ -->
 
