--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,15 @@
       crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
     <link rel="stylesheet" href="./sass/index.scss" />
+    
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
 
     <include src="./partials/header.html"></include>
     <main>
-      <section class="section">
         <include src="./partials/gallery.html"></include>
         <include src="./partials/pagination.html"></include>
-      </section>
     </main>
     
     <include src="./partials/footer.html"></include>
@@ -34,5 +33,8 @@
     <!-- ======== JS ============ -->
 
     <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/fetch.js"></script>
+    <script type="module" src="./js/pagination.js"></script>
+   
   </body>
 </html>
