--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/loader.html"></include>
+    <include src="./partials/button-scroll-to-top.html"></include>
 
     <!-- ======== JS ============ -->
 
