--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
     <include src="./partials/modal.html"></include>
     <include src="./partials/loader.html"></include>
     <include src="./partials/button-scroll-to-top.html"></include>
+    <include src="./partials/auth-modal.html"></include>
 
     <!-- ======== JS ============ -->
 
