--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <main>
       <section class="section">
         <include src="./partials/gallery.html"></include>
-        <include src="./partials/pagination.html"></include>
+        <!-- <include src="./partials/pagination.html"></include> -->
       </section>
     </main>
 
