--- a/src/libraty.html
+++ b/src/libraty.html
@@ -29,6 +29,6 @@
 
     <!-- ======== JS ============ -->
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/library.js"></script>
   </body>
 </html>
