--- a/src/index.html
+++ b/src/index.html
@@ -23,18 +23,29 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
 
     <include src="./partials/header.html"></include>
+    <include src="./partials/modal-team.html"></include>
     <main>
       <section class="section">
         <include src="./partials/gallery.html"></include>
         <include src="./partials/pagination.html"></include>
       </section>
-    </main>
 
-    <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/loader.html"></include>
     <include src="./partials/button-scroll-to-top.html"></include>
     <include src="./partials/auth-modal.html"></include>
+   
+
+
+    </main>
+
+
+
+
+<footer>
+      <include src="./partials/footer.html"></include>
+</footer>
+
 
     <!-- ======== JS ============ -->
 
