--- a/src/libraty.html
+++ b/src/libraty.html
@@ -23,10 +23,11 @@
 
     <include src="./partials/my-library.html"></include>
 
-    <include src="./partials/footer.html"></include>
+    <include src="./partials/modal-team.html"></include>
     <include src="./partials/modal.html"></include>
-    <include src="./partials/button-scroll-to-top.html"></include>
 
+    <include src="./partials/button-scroll-to-top.html"></include>
+    <include src="./partials/footer.html"></include>
     <!-- ======== JS ============ -->
 
     <script type="module" src="./js/library.js"></script>
