--- a/src/library.html
+++ b/src/library.html
@@ -16,12 +16,10 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
-
     <!-- ❗️❗️❗️ Add partials like so for every page -->
 
-
-        <include src="./partials/modal-team.html"></include>
-        <include src="./partials/modal.html"></include>
+    <include src="./partials/modal-team.html"></include>
+    <include src="./partials/modal.html"></include>
 
     <include src="./partials/my-library.html"></include>
 
@@ -29,6 +27,6 @@
     <include src="./partials/footer.html"></include>
 
     <!-- ======== JS ============ -->
-    <script type="module" src="./js/library.js"></script>
+    <script type="module" src="./library.js"></script>
   </body>
 </html>
