--- a/src/library.html
+++ b/src/library.html
@@ -17,11 +17,14 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/library-header"></include>
+
+    <include src="./partials/my-library.html"></include>
 
     <include src="./partials/modal-team.html"></include>
     <include src="./partials/modal.html"></include>
-
-    <include src="./partials/my-library.html"></include>
+    <include src="./partials/pagination.html"></include>
+    <include src="./partials/loader.html"></include>
 
     <include src="./partials/button-scroll-to-top.html"></include>
     <include src="./partials/footer.html"></include>
