--- a/src/library.html
+++ b/src/library.html
@@ -28,6 +28,7 @@
 
     <include src="./partials/button-scroll-to-top.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/auth-modal.html"></include>
 
     <!-- ======== JS ============ -->
     <script type="module" src="./library.js"></script>
